Fix button wrap border under dark skins

--- a/demos/mvc/content/integration/bootstrap-integration/styles.css
+++ b/demos/mvc/content/integration/bootstrap-integration/styles.css
@@ -320,7 +320,9 @@ header .container h1.visible-sm {
 .k-black .well,
 .k-metroblack .well,
 .k-black .ra-well-title,
-.k-metroblack .ra-well-title
+.k-metroblack .ra-well-title,
+.k-black .buttons-wrap,
+.k-metroblack .buttons-wrap
 {
     border-color: #444;
     background-color: #1e1e1e;
@@ -329,7 +331,8 @@ header .container h1.visible-sm {
 
 .k-highcontrast body,
 .k-highcontrast .well
-.k-highcontrast .ra-well-title
+.k-highcontrast .ra-well-title,
+.k-highcontrast .buttons-wrap
 {
     border-color: #664e62;
     background-color: #2c232b;
@@ -338,7 +341,8 @@ header .container h1.visible-sm {
 
 .k-moonlight body,
 .k-moonlight .well,
-.k-moonlight .ra-well-title
+.k-moonlight .ra-well-title,
+.k-moonlight .buttons-wrap
 {
     border-color: #171e28;
     background-color: #212a33;
